--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /app_demo/data/schema.xml
 /app_demo/data/build
 /config/config.php
+/config/languages.php
 /cache
 /propel/propel-1.5.6/
 .DS_Store
+/web/data
